Configuration, repositories, & more

--- a/src/Club/config.json
+++ b/src/Club/config.json
@@ -1,5 +1,8 @@
 ﻿{
   "AppSettings": {
     "SiteEmailAddress": "xD@xs.com"
+  },
+  "Data": {
+    "ClubContextConnection": "Server=(localdb)\\PRojectsV12;Database=ClubDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
