--- a/src/Club/bower.json
+++ b/src/Club/bower.json
@@ -8,7 +8,8 @@
     "jquery-validation-unobtrusive": "~3.2.5",
     "bootstrap": "~3.3.6",
     "font-awesome": "~4.5.0",
-    "bootswatch": " 3.3.5+2"
+    "bootswatch": " 3.3.5+2",
+    "angular": "~1.4.8"
 
   }
 }
