--- a/src/Club/project.lock.json
+++ b/src/Club/project.lock.json
@@ -19491,6 +19491,7 @@
       "EntityFramework.Core >= 7.0.0-rc1-final",
       "EntityFramework.MicrosoftSqlServer >= 7.0.0-rc1-final",
       "EntityFramework.Commands >= 7.0.0-rc1-final",
+      "Microsoft.AspNet.Identity >= 3.0.0-rc1-final",
       "Microsoft.AspNet.Identity.EntityFramework >= 3.0.0-rc1-final"
     ],
     "DNX,Version=v4.5.1": [
