--- a/src/Club/bower.json
+++ b/src/Club/bower.json
@@ -2,16 +2,15 @@
 	"name": "ASP.NET",
 	"private": true,
   "dependencies": {
-    "underscore": "~1.8.3",
+    "angular": "~1.4.8",
+    "bootstrap": "~3.3.6",
+    "bootswatch": " 3.3.5+2",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37",
+    "font-awesome": "~4.5.0",
+    "fullcalendar": "~2.6.0",
     "jquery": "~2.1.4",
     "jquery-validation": "~1.14.0",
     "jquery-validation-unobtrusive": "~3.2.5",
-    "bootstrap": "~3.3.6",
-    "font-awesome": "~4.5.0",
-    "bootswatch": " 3.3.5+2",
-    "eonasdan-bootstrap-datetimepicker": "~4.17.37",
-
-    "angular": "~1.4.8"
-
+    "underscore": "~1.8.3"
   }
 }
