--- a/src/Club/project.json
+++ b/src/Club/project.json
@@ -18,7 +18,7 @@
     "Microsoft.AspNet.Tooling.Razor": "1.0.0-rc1-final",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Authentication.Facebook": "1.0.0-*",
+    "Microsoft.AspNet.Authentication.Facebook": "1.0.0-rc1-final"
   },
 
   "commands": {
