--- a/src/Club/bower.json
+++ b/src/Club/bower.json
@@ -1,16 +1,20 @@
 {
-	"name": "ASP.NET",
-	"private": true,
+  "name": "ASP.NET",
+  "private": true,
   "dependencies": {
     "angular": "~1.4.8",
     "bootstrap": "~3.3.6",
     "bootswatch": " 3.3.5+2",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
+    "bootstrap-rating": "1.3.2",
     "font-awesome": "~4.5.0",
     "fullcalendar": "~2.6.0",
     "jquery": "~2.1.4",
     "jquery-validation": "~1.14.0",
     "jquery-validation-unobtrusive": "~3.2.5",
     "underscore": "~1.8.3"
+  },
+  "resolutions": {
+    "jquery": "1.9.1 - 2"
   }
 }
