--- a/src/Club/project.json
+++ b/src/Club/project.json
@@ -24,7 +24,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Owin.Security": "3.0.1",
     "Sendgrid": "6.3.4",
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "9.0.1",
+    "EPPlus": "4.1.0"
   },
 
     "commands": {
