--- a/src/Club/project.json
+++ b/src/Club/project.json
@@ -25,7 +25,8 @@
     "Microsoft.Owin.Security": "3.0.1",
     "Sendgrid": "6.3.4",
     "Newtonsoft.Json": "9.0.1",
-    "EPPlus": "4.1.0"
+    "EPPlus": "4.1.0",
+    "Microsoft.AspNet.Session": "1.0.0-rc1-final"
   },
 
     "commands": {
