--- a/src/Club/config.json
+++ b/src/Club/config.json
@@ -3,6 +3,6 @@
     "MaxKbFileSize": 100
   },
   "Data": {
-    "ClubContextConnection": "connectionstring"
+    "ClubContextConnection": "CONNECTION_STRING"
   }
 }
