--- a/src/Club/project.json
+++ b/src/Club/project.json
@@ -1,9 +1,9 @@
 {
-    "version": "1.0.0-*",
-    "compilationOptions": {
-        "emitEntryPoint": true
-    },
-
+  "version": "1.0.0-*",
+  "compilationOptions": {
+    "emitEntryPoint": true
+  },
+  "userSecretsId": "aspnet-club-3f9e7f2a-430c-48ef-bbd0-6309aef34dd2",
   "dependencies": {
     "AutoMapper": "4.1.1",
     "DocX": "1.0.0.19",
@@ -26,28 +26,32 @@
     "Sendgrid": "6.3.4",
     "Newtonsoft.Json": "9.0.1",
     "EPPlus": "4.1.0",
-    "Microsoft.AspNet.Session": "1.0.0-rc1-final"
+    "Microsoft.AspNet.Session": "1.0.0-rc1-final",
+    "Microsoft.Extensions.SecretManager": "1.0.0-rc1-final"
   },
 
-    "commands": {
-        "web": "Microsoft.AspNet.Server.Kestrel",
-        "ef": "EntityFramework.Commands"
-    },
+  "commands": {
+    "web": "Microsoft.AspNet.Server.Kestrel",
+    "ef": "EntityFramework.Commands"
+  },
 
-    "frameworks": {
-        "dnx451": {
-            "dependencies": {
-                "Humanizer": "2.0.0-beta0001"
-            }
-        }
-    },
+  "frameworks": {
+    "dnx451": {
+      "dependencies": {
+        "Humanizer": "2.0.0-beta0001"
+      }
+    }
+  },
+  "tools": {
+    "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final"
+  },
 
-    "exclude": [
-        "wwwroot",
-        "node_modules"
-    ],
-    "publishExclude": [
-        "**.user",
-        "**.vspscc"
-    ]
+  "exclude": [
+    "wwwroot",
+    "node_modules"
+  ],
+  "publishExclude": [
+    "**.user",
+    "**.vspscc"
+  ]
 }
