--- a/src/Club/project.json
+++ b/src/Club/project.json
@@ -20,14 +20,15 @@
     "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Tooling.Razor": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Tooling.Razor": "1.0.0-rc1-final", 
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Owin.Security": "3.0.1",
     "Sendgrid": "6.3.4",
     "Newtonsoft.Json": "9.0.1",
     "EPPlus": "4.1.0",
     "Microsoft.AspNet.Session": "1.0.0-rc1-final",
-    "Microsoft.Extensions.SecretManager": "1.0.0-rc1-final"
+    "Microsoft.Extensions.SecretManager": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Authentication.OAuth": "1.0.0-rc1-final"
   },
 
   "commands": {
