Consulta de Gist

--- a/src/Club/project.json
+++ b/src/Club/project.json
@@ -29,7 +29,8 @@
     "EPPlus": "4.1.0",
     "Microsoft.AspNet.Session": "1.0.0-rc1-final",
     "Microsoft.Extensions.SecretManager": "1.0.0-rc1-final",
-    "ImageProcessor": "2.4.4"
+    "ImageProcessor": "2.4.4",
+    "Octokit": "0.23.0"
   },
 
   "commands": {
